testsuite/tests/explicit-dicts/should_fail/Roles9.stderr

Roles9.hs:26:6: error:
    • Explicit dictionary application to: ‘Ord a’
      is not allowed because the instance incoherence check
      requires that its type arguments do not occur in an equality,
      found: ‘a ~ b’
    • In the expression: evilInsert ((reverseOrd @Int :: Ord a))
      In an equation for ‘f9’:
          f9 = evilInsert ((reverseOrd @Int :: Ord a))
